force-app/main/default/objects/T_Detalhe_do_log__c/T_Detalhe_do_log__c.object-meta.xml
<CustomObject>
    <label>Detalhe do log</label>
    <nameField>
        <displayFormat>DL - {000}</displayFormat>
        <label>Nome de Detalhe do log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Detalhes do log</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>