force-app/main/default/objects/T_Detalhe_do_log__c/fields/Log_de_integra_o_M__c.field-meta.xml
<CustomField>
    <fullName>Log_de_integra_o_M__c</fullName>
    <label>Log de integração M</label>
    <referenceTo>T_Log_de_integracao__c</referenceTo>
    <relationshipLabel>Detalhes do log (Log de integração M)</relationshipLabel>
    <relationshipName>Detalhes_do_log</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>