force-app/main/default/objects/T_Detalhe_do_log__c/fields/T_Chave__c.field-meta.xml
<CustomField>
    <fullName>T_Chave__c</fullName>
    <label>Chave</label>
    <length>255</length>
    <type>Text</type>
</CustomField>