force-app/main/default/objects/T_Detalhe_do_log__c/fields/T_Descricao__c.field-meta.xml
<CustomField>
    <fullName>T_Descricao__c</fullName>
    <label>Descrição</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>